fix: remove unnecessary padding to avoid header overflow

--- a/src/pages/calendar/calendar.style.scss
+++ b/src/pages/calendar/calendar.style.scss
@@ -1,6 +1,5 @@
 @use "../../style/variables" as var;
 
-
 @mixin dynamicLineClamp($clamp: 3) {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -41,7 +40,7 @@
     grid-template-rows: 30px;
     gap: 5px;
 
-    padding: 10px 0;
+    padding: 10px 0 5px;
   }
 
   &__schedule {
